18/10 - Third corrections from Ed

--- a/compcontrol.tex
+++ b/compcontrol.tex
@@ -219,7 +219,7 @@ initialised and timing properties, such as the trigger and sample clock for
 each \ac{daq} card are set. An example of a sequence as represented in
 the user interface is shown in~\FigureRef{fig:motmaster_sequence}. In
 this example, the output hardware is re-initialised to its default
-values before enabled the 2D and 3D \ac{mots}. Subsequent stages of
+values before the sequence continues by switching on the 2D and 3D \ac{mots}. Subsequent stages of
 the experiment are similarly defined, but are not shown in the figure. Each sequence step is represented as a column, where the rows
 correspond to the properties defined above. An exception to this are
 the analogue input channels, whose data are not shown in the user
